Refactor is_subset to is_subnet

--- a/examples/api_basics.ipynb
+++ b/examples/api_basics.ipynb
@@ -19,6 +19,7 @@
     "        findReferencesInTargets, makeSerializationFile\n",
     "from pySubnetSB.compatibility_collection_inspector import CompatibilityCollectionInspector\n",
     "from pySubnetSB.network import Network\n",
+    "import pySubnetSB.constants as cn\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -110,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ssignments: 100%|███████████| 8333330/8333330 [00:00<00:00, 30958830250.06it/s]"
+      "ssignments: 100%|███████████| 8333330/8333330 [00:00<00:00, 26379259888.54it/s]"
      ]
     }
    ],
@@ -196,279 +197,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "eb93b70a-8ce0-4d74-b68f-6070b0744f76",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jlheller/home/Technical/repos/pySubnetSB/examples\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3fa9088a-aeb8-4fbd-8704-115c3f534d46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "// Created by libAntimony v2.15.0\n",
-      "model *MODEL1605030001()\n",
-      "\n",
-      "  // Compartments and Species:\n",
-      "  compartment default;\n",
-      "  species s2 in default, s3 in default, s4 in default, s14 in default, s16 in default;\n",
-      "  species s13 in default, s12 in default;\n",
-      "\n",
-      "  // Reactions:\n",
-      "  re1:  => s2; default*((1 - e_pi)*N1*re1_delta*s3);\n",
-      "  re3: s2 => ; default*c1*s2;\n",
-      "  re4: s4 => s3; default*((1 - e_rt)*beta*s4*s2);\n",
-      "  re5:  => s4; default*s;\n",
-      "  re7: s4 => ; default*d*s4;\n",
-      "  re8: s3 => ; default*re8_k1*s3;\n",
-      "  re9: s12 => s13; default*epi*s12;\n",
-      "  re11:  => s14; default*(mu*re11_k1*s12);\n",
-      "  re12: s12 => ; default*(re12_a*s12*s16);\n",
-      "  re14: s13 => ; default*re14_k1*s13;\n",
-      "  re15: s16 => ; default*(omega*s13*s16*s16/(re15_b*s4));\n",
-      "  re17: s13 => ; default*(re17_a*s16*s13);\n",
-      "  re18: s12 => ; default*mu*s12;\n",
-      "  re20: s14 => ; default*re20_k1*s14;\n",
-      "  re24: s13 => 2 s13; default*(re24_r*epi*s13);\n",
-      "  re25: s12 => 2 s12; default*(re25_psi*s14*(((1 + re25_p*s2)*re25_N2 - s12)/(re25_phi + (1 + re25_p*s2)*re25_N2 - s12)));\n",
-      "  re26: s16 => 2 s16; default*(omega*s13*s16);\n",
-      "  Production_of_HPV_due_to_HPV_self_proliferating:  => s14; default*(mu*Production_of_HPV_due_to_HPV_self_proliferating_k2*s13);\n",
-      "\n",
-      "  // Species initializations:\n",
-      "  s2 = 48000;\n",
-      "  s3 = beta*s4*s2;\n",
-      "  s4 = 320000;\n",
-      "  s14 = 0;\n",
-      "  s16 = 0.01;\n",
-      "  s13 = 0;\n",
-      "  s12 = 1;\n",
-      "\n",
-      "  // Compartment initializations:\n",
-      "  default = 1;\n",
-      "\n",
-      "  // Variable initializations:\n",
-      "  beta = c1/(N1*s4);\n",
-      "  e_rt = 0;\n",
-      "  e_pi = 0;\n",
-      "  epi = 0.5;\n",
-      "  omega = 0.001;\n",
-      "  mu = 0.048;\n",
-      "  c1 = 23;\n",
-      "  N1 = 467;\n",
-      "  s = d*s4 + beta*s4*s2;\n",
-      "  d = 0.01;\n",
-      "  re1_delta = 1;\n",
-      "  re8_k1 = 1;\n",
-      "  re11_k1 = 1000;\n",
-      "  re12_a = 0.01;\n",
-      "  re14_k1 = 0.048;\n",
-      "  re15_b = 3.5e-05;\n",
-      "  re17_a = 0.01;\n",
-      "  re20_k1 = 0.05;\n",
-      "  re24_r = 0.1;\n",
-      "  re25_N2 = 10000;\n",
-      "  re25_p = 2.0833e-05;\n",
-      "  re25_phi = 1000000;\n",
-      "  re25_psi = 0.0067;\n",
-      "  Production_of_HPV_due_to_HPV_self_proliferating_k2 = 1000;\n",
-      "\n",
-      "  // Other declarations:\n",
-      "  const default, beta, e_rt, e_pi, epi, omega, mu, c1, N1, s, d;\n",
-      "\n",
-      "  // Unit definitions:\n",
-      "  unit volume = 1e-3 litre;\n",
-      "  unit time_unit = 86400 second;\n",
-      "  unit substance = item;\n",
-      "\n",
-      "  // Display Names:\n",
-      "  time_unit is \"time\";\n",
-      "  s2 is \"V\";\n",
-      "  s3 is \"I\";\n",
-      "  s4 is \"T\";\n",
-      "  s14 is \"W\";\n",
-      "  s16 is \"E\";\n",
-      "  s13 is \"Y2\";\n",
-      "  s12 is \"Y1\";\n",
-      "  re1 is \"Production of HIV virion\";\n",
-      "  re3 is \"Death of HIV\";\n",
-      "  re4 is \"Production of HIV infected cells\";\n",
-      "  re5 is \"Production of T cells\";\n",
-      "  re7 is \"Decay of T cells\";\n",
-      "  re8 is \"Decay of HIV-infected\";\n",
-      "  re9 is \"Production of HPV-self-proliferating cells by HPV infected\";\n",
-      "  re11 is \"Production of HPV due to HPVinfected\";\n",
-      "  re12 is \"Death of HPV infected due to Effector cells\";\n",
-      "  re14 is \"Decay of HPV self-proliferating\";\n",
-      "  re15 is \"Logistic term for Effector cells\";\n",
-      "  re17 is \"Death of HPV self-proliferating cells due to effector cells\";\n",
-      "  re18 is \"Decay of HPV-infected cells\";\n",
-      "  re20 is \"Decay of HPV\";\n",
-      "  re24 is \"Proliferation of HPV self-proliferating cells\";\n",
-      "  re25 is \"Productionof HPV infected cells\";\n",
-      "  re26 is \"Production of Effector cell\";\n",
-      "  Production_of_HPV_due_to_HPV_self_proliferating is \"Production of HPV due to HPV self proliferating\";\n",
-      "\n",
-      "  model model_source \"http://identifiers.org/biomodels.db/MODEL1605030001\"\n",
-      "  model description \"urn:miriam:taxonomy:12721\"\n",
-      "  model created \"2015-12-16T13:33:59Z\"\n",
-      "  model modified \"2015-12-16T13:33:59Z\"\n",
-      "  model creator1.givenName \"Andrew\"\n",
-      "  model creator1.familyName \"Leber\"\n",
-      "  model creator1.organization \"VT\"\n",
-      "  model creator1.email \"ajleber@vt.edu\"\n",
-      "  model creator2.givenName \"Raquel\"\n",
-      "  model creator2.familyName \"Hontecillas\"\n",
-      "  model creator2.organization \"VT\"\n",
-      "  model creator2.email \"rmagarzo@vt.edu\"\n",
-      "  model creator3.givenName \"Stanca\"\n",
-      "  model creator3.familyName \"Ciupe\"\n",
-      "  model creator3.organization \"VT\"\n",
-      "  model creator3.email \"stanca@math.vt.edu\"\n",
-      "  model creator4.givenName \"Stefan\"\n",
-      "  model creator4.familyName \"Hoops\"\n",
-      "  model creator4.organization \"VT\"\n",
-      "  model creator4.email \"shoops@vbi.vt.edu\"\n",
-      "  model creator5.givenName \"Meghna\"\n",
-      "  model creator5.familyName \"Verma\"\n",
-      "  model creator5.organization \"VT\"\n",
-      "  model creator5.email \"meghna89@vt.edu\"\n",
-      "  model creator6.givenName \"Samantha\"\n",
-      "  model creator6.familyName \"Erwin\"\n",
-      "  model creator6.organization \"VT\"\n",
-      "  model creator6.email \"sherwin@vt.edu\"\n",
-      "  model creator7.givenName \"Vida\"\n",
-      "  model creator7.familyName \"Abedi\"\n",
-      "  model creator7.organization \"VT\"\n",
-      "  model creator7.email \"abedi@vt.edu\"\n",
-      "  model creator8.givenName \"Josep\"\n",
-      "  model creator8.familyName \"Bassaganya-Riera\"\n",
-      "  model creator8.organization \"VT\"\n",
-      "  model creator8.email \"jbassaga@vt.edu\"\n",
-      "\n",
-      "  // Notes:\n",
-      "  model notes ```\n",
-      "   <pre>This is a COPASI version of the HIV/HPV coinfection model submitted to PLoS One.\n",
-      "\n",
-      "Title: Modeling the mechanisms by which HIV-associated immunosuppression influences HPV persistence at the oral mucosa\n",
-      "\n",
-      "Authors: Meghna Verma*, Samantha Erwin*, Vida Abedi, Raque Hontecillas, Stefan Hoops, Andrew Leber, Josep Bassaganya-Riera, Stanca Ciupe\n",
-      "\n",
-      "* Contributed equally to the work\n",
-      "\n",
-      "Corresponding Authors: Josep Bassaganya-Riera and Stanca Ciupe</pre>\n",
-      "```\n",
-      "  s2 notes \"<pre>HIV</pre>\"\n",
-      "  s3 notes \"<pre>HIV infected cells</pre>\"\n",
-      "  s4 notes \"<pre>CD4+ T cells</pre>\"\n",
-      "  s14 notes \"<pre>HPV</pre>\"\n",
-      "  s16 notes \"<pre>HPV specific CTL</pre>\"\n",
-      "  s13 notes \"<pre>HPV self-proliferating cells</pre>\"\n",
-      "  s12 notes \"<pre>HPV infected cells</pre>\"\n",
-      "  re1 notes ```\n",
-      "   <pre>N1 - Ciupe MS, Bivort BL, Bortz DM, Nelson PW. Estimating kinetic parameters from HIV primary infection data through the eyes of three different mathematical models. Math Biosci. 2006;200:1-27.\n",
-      "\n",
-      "delta - Klatt NR, Shudo E, Ortiz AM, Engram JC, Paiardini M, Lawson B, et al. CD8+ lymphocytes control viral replication in SIVmac239-infected rhesus macaques without decreasing the lifespan of productively infected cells. PLoS Pathog. 2010; 6:1-11.</pre>\n",
-      "```\n",
-      "  re3 notes \"<pre>Ramratnam B, Bonhoeffer S, Binley J, Hurley A, Zhang L, Mittler JE, et al.  Rapid production and clearance of HIV-1 and hepatitis C virus assessed by large volume plasma apheresis. Lancet. 1999;354:1782-5.</pre>\"\n",
-      "  re7 notes \"<pre>Mohri H, Perelson AS, Tung K, Ribeiro RM, Ramratnam B, Markowitz M, et al. Increased turnover of T lymphocytes in HIV-1 infection and its reduction by antiretroviral therapy. J Exp Med. 2001;194:1277-88.</pre>\"\n",
-      "  re8 notes \"<pre>Klatt NR, Shudo E, Ortiz AM, Engram JC, Paiardini M, Lawson B, et al. CD8+ lymphocytes control viral replication in SIVmac239-infected rhesus macaques without decreasing the lifespan of productively infected cells. PLoS Pathog. 2010; 6:1-11.</pre>\"\n",
-      "  re9 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re11 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re12 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re14 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re17 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re18 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re20 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re24 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re25 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  re26 notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "  Production_of_HPV_due_to_HPV_self_proliferating notes \"<pre>Murall CL, Bauch CT, Day T. Could the human papillomavirus vaccines drive virulence evolution? Proc Biol Sci. 2015;282:20141069.</pre>\"\n",
-      "end\n",
-      "\n",
-      "MODEL1605030001 is \"Verma2016 - HIV and HPV co-infection, T-cell response\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#PATH = \"/Users/jlheller/home/Technical/repos/SBMLModel/data/BIOMD0000000695.xml\"\n",
-    "#PATH = \"/Users/jlheller/home/Technical/repos/SBMLModel/data/BIOMD0000000480.xml\"\n",
-    "PATH = \"https://www.ebi.ac.uk/biomodels/services/download/get-files/MODEL1701090001/3/BIOMD0000000695_url.xml\"\n",
-    "PATH = \"/Users/jlheller/home/Technical/repos/SBMLModel/data/BIOMD0000000872.xml\"\n",
-    "rr = te.loadSBMLModel(PATH)\n",
-    "target_model = rr.getAntimony()\n",
-    "print(target_model)"
+    "URL = \"https://www.ebi.ac.uk/biomodels/services/download/get-files/MODEL1701090001/3/BIOMD0000000695_url.xml\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "269ccae2-151d-4a80-8d34-da03c892ffd9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rr = te.loadSBMLModel(PATH)\n",
-    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), is_subset=True)\n",
-    "result.assignment_pairs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "961552a9-6e27-405d-9b61-138dccf01cc8",
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "assignments: 100%|██████████| 1785710/1785710 [00:00<00:00, 33940919.54it/s]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "[[], [], [], []]"
+       "[species: [6 2 8 7], reaction: [12  5 14 23 24 13  6],\n",
+       " species: [6 2 8 7], reaction: [12  5 15 23 24 13  6],\n",
+       " species: [6 8 2 7], reaction: [12 23 14  5  6 13 24],\n",
+       " species: [6 8 2 7], reaction: [12 23 15  5  6 13 24],\n",
+       " species: [1 7 8 2], reaction: [25  5 29  9 11 27  6],\n",
+       " species: [1 8 7 2], reaction: [25  9 29  5  6 27 11],\n",
+       " species: [1 7 8 2], reaction: [25  5 29  9 11 28  6],\n",
+       " species: [1 8 7 2], reaction: [25  9 29  5  6 28 11],\n",
+       " species: [0 2 8 1], reaction: [30  5 32 23 24 31  6],\n",
+       " species: [0 2 8 1], reaction: [30  5 33 23 24 31  6],\n",
+       " species: [0 2 8 1], reaction: [30  5 34 23 24 31  6],\n",
+       " species: [0 7 8 1], reaction: [30  5 32  9 11 31  6],\n",
+       " species: [0 7 8 1], reaction: [30  5 33  9 11 31  6],\n",
+       " species: [0 7 8 1], reaction: [30  5 34  9 11 31  6],\n",
+       " species: [0 8 7 1], reaction: [30  9 32  5  6 31 11],\n",
+       " species: [0 8 7 1], reaction: [30  9 33  5  6 31 11],\n",
+       " species: [0 8 7 1], reaction: [30  9 34  5  6 31 11],\n",
+       " species: [0 2 7 1], reaction: [30  9 32 23 24 31 11],\n",
+       " species: [0 2 7 1], reaction: [30  9 33 23 24 31 11],\n",
+       " species: [0 2 7 1], reaction: [30  9 34 23 24 31 11],\n",
+       " species: [0 7 2 1], reaction: [30 23 32  9 11 31 24],\n",
+       " species: [0 7 2 1], reaction: [30 23 33  9 11 31 24],\n",
+       " species: [0 7 2 1], reaction: [30 23 34  9 11 31 24],\n",
+       " species: [0 8 2 1], reaction: [30 23 32  5  6 31 24],\n",
+       " species: [0 8 2 1], reaction: [30 23 33  5  6 31 24],\n",
+       " species: [0 8 2 1], reaction: [30 23 34  5  6 31 24]]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_network = Network.makeFromSBMLFile(PATH)\n",
-    "reference_network = Network.makeFromAntimonyStr(reference_model)\n",
-    "inspector = CompatibilityCollectionInspector(reference_network, target_network, is_subset=True)\n",
-    "inspector.compatibility_collection_result.compatibility_collection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d05befe0-40a9-42c4-8b5a-21a67c69b3a4",
-   "metadata": {},
-   "source": [
-    "NOT FINDING COMPATIBLE SPECIES"
+    "rr = te.loadSBMLModel(URL)\n",
+    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), is_subnet=True,\n",
+    "        identity=cn.ID_WEAK)\n",
+    "result.assignment_pairs"
    ]
   }
  ],
