--- a/examples/api_basics.ipynb
+++ b/examples/api_basics.ipynb
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ssignments: 100%|███████████| 8333330/8333330 [00:00<00:00, 26379259888.54it/s]"
+      "ssignments: 100%|███████████| 8333330/8333330 [00:00<00:00, 29873948164.38it/s]"
      ]
     }
    ],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "3fa9088a-aeb8-4fbd-8704-115c3f534d46",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "269ccae2-151d-4a80-8d34-da03c892ffd9",
    "metadata": {},
    "outputs": [
@@ -215,9 +215,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|██████████| 1785710/1785710 [00:00<00:00, 33940919.54it/s]\n"
+      "assignments: 100%|██████████| 1785710/1785710 [00:00<00:00, 32979505.50it/s]\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "rr = te.loadSBMLModel(URL)\n",
+    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), is_subnet=True,\n",
+    "        identity=cn.ID_WEAK)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e4c33c0-a885-43ef-8046-8a8c521aa725",
+   "metadata": {},
+   "source": [
+    "We can see all of the mappings of target species to reference speces and target reactions to reference reactions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "725b4dfb-f6a3-4866-a066-a7f03d2c4284",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -249,16 +270,77 @@
        " species: [0 8 2 1], reaction: [30 23 34  5  6 31 24]]"
       ]
      },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.assignment_pairs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "933ce8ef-e58f-41a0-89d6-996d10ffdf46",
+   "metadata": {},
+   "source": [
+    "We can also see the induced network, a subset of the target network that is structurally identical with the reference network. Note that since we use weak identity, some of the bi-uni reactions in the reference network are assigned to uni-null reactions in the target network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "54755695-1e4b-46e1-a77c-69813409a883",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3247586: 4 species, 7 reactions\n",
+       "  R_13: xFinal_8 -> xFinal_7\n",
+       "  R_6: xFinal_8 -> xFinal_9 + xFinal_8\n",
+       "  R_16: xFinal_7 -> \n",
+       "  R_24:  -> xFinal_3\n",
+       "  R_25: xFinal_3 -> \n",
+       "  R_14: xFinal_7 -> 2.0 xFinal_7\n",
+       "  R_7: xFinal_9 -> "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.makeInducedNetwork(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "32618df4-e114-4f8c-b432-06a1e201e8ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9091999: 4 species, 7 reactions\n",
+       "  R_13: xFinal_8 -> xFinal_7\n",
+       "  R_24:  -> xFinal_3\n",
+       "  R_16: xFinal_7 -> \n",
+       "  R_6: xFinal_8 -> xFinal_9 + xFinal_8\n",
+       "  R_7: xFinal_9 -> \n",
+       "  R_14: xFinal_7 -> 2.0 xFinal_7\n",
+       "  R_25: xFinal_3 -> "
+      ]
+     },
      "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rr = te.loadSBMLModel(URL)\n",
-    "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), is_subnet=True,\n",
-    "        identity=cn.ID_WEAK)\n",
-    "result.assignment_pairs"
+    "result.makeInducedNetwork(3)"
    ]
   }
  ],
