Updates to analysis

--- a/notebooks/analyze_biomodels_subnets.ipynb
+++ b/notebooks/analyze_biomodels_subnets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "cd24ba31-b89f-42d9-b5f1-d7a886ee093d",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import tellurium as te\n",
+    "from typing import List\n",
     "\n",
     "import pySubnetSB.constants as cn\n",
     "from pySubnetSB.network import Network"
@@ -141,13 +142,13 @@
    ],
    "source": [
     "PATH = os.path.join(cn.PROJECT_DIR, \"biomodels_subnets.csv\")\n",
-    "df = pd.read_csv(PATH)\n",
-    "df.head()"
+    "FULL_DF = pd.read_csv(PATH)\n",
+    "FULL_DF.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "214071cd-9204-492d-a937-1532609cb871",
    "metadata": {},
    "outputs": [
@@ -157,16 +158,16 @@
        "(186, 492)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "REFERENCE_NAMES = (df['reference_name'].unique())\n",
+    "REFERENCE_NAMES = (FULL_DF['reference_name'].unique())\n",
     "REFERENCE_NAMES.sort()\n",
     "NUM_REFERENCE = len(REFERENCE_NAMES)\n",
-    "TARGET_NAMES = (df['target_name'].unique())\n",
+    "TARGET_NAMES = (FULL_DF['target_name'].unique())\n",
     "TARGET_NAMES.sort()\n",
     "NUM_TARGET = len(TARGET_NAMES)\n",
     "NUM_REFERENCE, NUM_TARGET"
@@ -299,10 +300,26 @@
     }
    ],
    "source": [
-    "SUBNET_DF = df[df['num_assignment_pair'] > 0]\n",
+    "SUBNET_DF = FULL_DF[FULL_DF['num_assignment_pair'] > 0]\n",
     "SUBNET_DF = SUBNET_DF.copy()\n",
     "SUBNET_DF = SUBNET_DF.reset_index()\n",
     "SUBNET_DF.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "033d02c3-a8ff-40f9-97ed-68e70735eaed",
+   "metadata": {},
+   "source": [
+    "## Check for duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "755cdc10-7e52-473f-8c5c-7e59e890d5f2",
+   "metadata": {},
+   "source": [
+    "**REMOVE DUPLICATES**"
    ]
   },
   {
@@ -315,7 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "285efb2b-f9c3-47fc-8abd-1a6a783a6aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeTestDataFrame():\n",
+    "    df = pd.DataFrame({'reference_name': [0, 1, 1, 2, 2, 2], 'target_name': [0, 1, 1, 2, 2, 2]})\n",
+    "    return df.astype(str)\n",
+    "TEST_NUM_DUPLICATE = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "3d60abcd-731a-47d4-8e29-2925e51fab2f",
    "metadata": {},
    "outputs": [
@@ -359,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e870c9e9-9997-4e6b-9fee-fe66649bf768",
    "metadata": {},
    "outputs": [
@@ -390,6 +420,194 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "77fda729-7fd6-4b6f-b6a4-3a7873aa270e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def checkDuplicates(df:pd.DataFrame, is_print:bool=True)->list:\n",
+    "    \"\"\"\n",
+    "    Checks if elements are duplicated\n",
+    "    \"\"\"\n",
+    "    keys = list(df['reference_name'] + df['target_name'])\n",
+    "    duplicates = []\n",
+    "    if len(keys) > len(set(keys)):\n",
+    "        duplicates = [k for k in keys if keys.count(k) > 1]\n",
+    "        if is_print:\n",
+    "            print(f\"**Duplicate entries: {duplicates}\")\n",
+    "    else:\n",
+    "        if is_print:\n",
+    "            print(\"**No duplicate entries\")\n",
+    "    return duplicates\n",
+    "\n",
+    "count = len(checkDuplicates(makeTestDataFrame(), is_print=False))\n",
+    "assert(count == TEST_NUM_DUPLICATE)\n",
+    "print(\"OK!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ef241846-d661-4e62-8235-79c1f9cd1914",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def removeDuplicates(df:pd.DataFrame)->pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Remove rows where the reference_name + target_name is duplicated.\n",
+    "\n",
+    "    Args:\n",
+    "        df: dataframe procesed\n",
+    "\n",
+    "    Returns:\n",
+    "        DataFrame w/o duplicates\n",
+    "    \"\"\"\n",
+    "    keys = np.array(df['reference_name'].astype(str) + df['target_name'].astype(str))\n",
+    "    all_positions = np.array(range(len(keys)))\n",
+    "    drop_idxs = []\n",
+    "    for key in set(keys):\n",
+    "        key_positions = all_positions[keys == key]\n",
+    "        drop_idxs.extend(key_positions[:-1])\n",
+    "    result_df = df.drop(drop_idxs)\n",
+    "    return result_df\n",
+    "\n",
+    "# TESTS\n",
+    "df = makeTestDataFrame()\n",
+    "result_df = removeDuplicates(df)\n",
+    "assert(len(result_df) == 3)\n",
+    "print(\"OK!\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "517a1053-2e00-4829-8c9a-a3108677fd14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getTargetNames(reference_name:str)->List[str]:\n",
+    "    \"\"\"\n",
+    "    Gets the list of target names for the reference, if any.\n",
+    "\n",
+    "    Args:\n",
+    "       reference_name: str\n",
+    "\n",
+    "    Returns:\n",
+    "       list-str\n",
+    "    \"\"\"\n",
+    "    sel = SUBNET_DF[\"reference_name\"] == reference_name\n",
+    "    if np.sum(sel) == 0:\n",
+    "        return None\n",
+    "    target_names = SUBNET_DF[sel][\"target_name\"].values\n",
+    "    return target_names\n",
+    "\n",
+    "# Tests\n",
+    "names = getTargetNames(\"BIOMD0000000224\")\n",
+    "assert(len(names) > 0)\n",
+    "names = getTargetNames(\"BIOMD000000022x\")\n",
+    "assert(names is None)\n",
+    "print(\"OK!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cc9aff48-671e-40a9-8257-b3493be8ceb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    BIOMD0000000939\n",
+       "1    BIOMD0000000269\n",
+       "2    BIOMD0000000056\n",
+       "3    BIOMD0000000704\n",
+       "4    BIOMD0000000856\n",
+       "5    BIOMD0000000429\n",
+       "Name: target_name, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SUBNET_DF[SUBNET_DF[\"reference_name\"] == 'BIOMD0000000224'][\"target_name\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c50fc6ed-adf8-4034-bac2-b7bdd6cbbc2e",
+   "metadata": {},
+   "source": [
+    "# Clean Data & Summary Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b2a316a9-e532-4b9c-8424-717c8a774104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SUBNET_DF = removeDuplicates(SUBNET_DF)\n",
+    "FULL_DF = removeDuplicates(FULL_DF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "67fcb609-60ba-4bda-9b8f-303e0f430b3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(SUBNET_DF)=325, len(FULL_DF)=91369\n",
+      "unique reference = 186\n",
+      "unique target = 492\n",
+      "num_reference_target_pair=91512\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"len(SUBNET_DF)={len(SUBNET_DF)}, len(FULL_DF)={len(FULL_DF)}\")\n",
+    "unique_reference = len(FULL_DF[\"reference_name\"].unique())\n",
+    "print(f\"unique reference = {unique_reference}\")\n",
+    "unique_target = len(FULL_DF[\"target_name\"].unique())\n",
+    "print(f\"unique target = {unique_target}\")\n",
+    "num_reference_target_pair = unique_reference*unique_target\n",
+    "print(f\"num_reference_target_pair={num_reference_target_pair}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4190e183-2a78-4acf-88bf-a3f2d1c62e0c",
    "metadata": {},
@@ -399,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d8819527-febb-4ad7-9005-cb211e940f2d",
    "metadata": {},
    "outputs": [
@@ -409,7 +627,7 @@
        "Text(0.5, 1.0, 'Strong Identity Subnets in BioModels. Reference model <= 10 Reactions.')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -436,17 +654,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "3a0876e6-2127-4493-a74e-0059f3b92291",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x306b81ac0>]"
+       "[<matplotlib.lines.Line2D at 0x16c10adf0>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -481,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "f558c70a-7e6e-4f42-93ed-674d91950469",
    "metadata": {},
    "outputs": [],
@@ -491,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "abee53cf-ddaa-431a-ae60-6d5c4394b54a",
    "metadata": {},
    "outputs": [
@@ -831,85 +1049,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "7f762cc5-25ba-4709-83e9-59ca8a2eaa93",
+   "execution_count": 36,
+   "id": "c0032e23-2dee-4ebc-a74e-d8423c4ebe16",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['BIOMD0000000191', 'BIOMD0000000387', 'BIOMD0000000224',\n",
-       "       'BIOMD0000000556', 'BIOMD0000000026', 'BIOMD0000000967',\n",
-       "       'BIOMD0000000966', 'BIOMD0000000755', 'BIOMD0000000027',\n",
-       "       'BIOMD0000000231', 'BIOMD0000000225', 'BIOMD0000000386',\n",
-       "       'BIOMD0000000812', 'BIOMD0000000184', 'BIOMD0000000609',\n",
-       "       'BIOMD0000000186', 'BIOMD0000000353', 'BIOMD0000000384',\n",
-       "       'BIOMD0000000390', 'BIOMD0000000233', 'BIOMD0000000031',\n",
-       "       'BIOMD0000000970', 'BIOMD0000000965', 'BIOMD0000000385',\n",
-       "       'BIOMD0000000408', 'BIOMD0000000805', 'BIOMD0000000193',\n",
-       "       'BIOMD0000000187', 'BIOMD0000000178', 'BIOMD0000000150',\n",
-       "       'BIOMD0000000168', 'BIOMD0000000197', 'BIOMD0000001048',\n",
-       "       'BIOMD0000000236', 'BIOMD0000000785', 'BIOMD0000000948',\n",
-       "       'BIOMD0000000974', 'BIOMD0000000545', 'BIOMD0000000380',\n",
-       "       'BIOMD0000000357', 'BIOMD0000000814', 'BIOMD0000000157',\n",
-       "       'BIOMD0000000194', 'BIOMD0000000962', 'BIOMD0000000976',\n",
-       "       'BIOMD0000000963', 'BIOMD0000000036', 'BIOMD0000000591',\n",
-       "       'BIOMD0000000546', 'BIOMD0000000383', 'BIOMD0000000803',\n",
-       "       'BIOMD0000000624', 'BIOMD0000000156', 'BIOMD0000000870',\n",
-       "       'BIOMD0000000455', 'BIOMD0000000253', 'BIOMD0000000284',\n",
-       "       'BIOMD0000000045', 'BIOMD0000000092', 'BIOMD0000000044',\n",
-       "       'BIOMD0000000520', 'BIOMD0000000483', 'BIOMD0000000454',\n",
-       "       'BIOMD0000000898', 'BIOMD0000000456', 'BIOMD0000001012',\n",
-       "       'BIOMD0000000721', 'BIOMD0000000047', 'BIOMD0000000292',\n",
-       "       'BIOMD0000000319', 'BIOMD0000001007', 'BIOMD0000000325',\n",
-       "       'BIOMD0000000866', 'BIOMD0000000899', 'BIOMD0000000876',\n",
-       "       'BIOMD0000000692', 'BIOMD0000000309', 'BIOMD0000000321',\n",
-       "       'BIOMD0000000484', 'BIOMD0000000282', 'BIOMD0000000057',\n",
-       "       'BIOMD0000000043', 'BIOMD0000000916', 'BIOMD0000000902',\n",
-       "       'BIOMD0000000080', 'BIOMD0000000283', 'BIOMD0000000485',\n",
-       "       'BIOMD0000000308', 'BIOMD0000001016', 'BIOMD0000000877',\n",
-       "       'BIOMD0000000678', 'BIOMD0000000120', 'BIOMD0000000875',\n",
-       "       'BIOMD0000000322', 'BIOMD0000000487', 'BIOMD0000000518',\n",
-       "       'BIOMD0000000295', 'BIOMD0000000068', 'BIOMD0000000040',\n",
-       "       'BIOMD0000000054', 'BIOMD0000000732', 'BIOMD0000000082',\n",
-       "       'BIOMD0000000041', 'BIOMD0000000069', 'BIOMD0000000519',\n",
-       "       'BIOMD0000000486', 'BIOMD0000000323', 'BIOMD0000000337',\n",
-       "       'BIOMD0000000121', 'BIOMD0000000662', 'BIOMD0000000104',\n",
-       "       'BIOMD0000000851', 'BIOMD0000000845', 'BIOMD0000000306',\n",
-       "       'BIOMD0000000460', 'BIOMD0000000272', 'BIOMD0000000716',\n",
-       "       'BIOMD0000000717', 'BIOMD0000000267', 'BIOMD0000001031',\n",
-       "       'BIOMD0000000307', 'BIOMD0000001019', 'BIOMD0000000461',\n",
-       "       'BIOMD0000000850', 'BIOMD0000000887', 'BIOMD0000000663',\n",
-       "       'BIOMD0000000113', 'BIOMD0000000846', 'BIOMD0000000305',\n",
-       "       'BIOMD0000000311', 'BIOMD0000000517', 'BIOMD0000000271',\n",
-       "       'BIOMD0000000932', 'BIOMD0000000098', 'BIOMD0000000066',\n",
-       "       'BIOMD0000000072', 'BIOMD0000000258', 'BIOMD0000001032',\n",
-       "       'BIOMD0000000310', 'BIOMD0000000462', 'BIOMD0000000847',\n",
-       "       'BIOMD0000000112', 'BIOMD0000000116', 'BIOMD0000001022',\n",
-       "       'BIOMD0000000248', 'BIOMD0000000076', 'BIOMD0000000063',\n",
-       "       'BIOMD0000000077', 'BIOMD0000000117', 'BIOMD0000000115',\n",
-       "       'BIOMD0000000854', 'BIOMD0000000698', 'BIOMD0000000868',\n",
-       "       'BIOMD0000001035', 'BIOMD0000000459', 'BIOMD0000001021',\n",
-       "       'BIOMD0000000075', 'BIOMD0000000713', 'BIOMD0000000060',\n",
-       "       'BIOMD0000000458', 'BIOMD0000001020', 'BIOMD0000001034',\n",
-       "       'BIOMD0000000869', 'BIOMD0000000100', 'BIOMD0000000114',\n",
-       "       'BIOMD0000000882', 'BIOMD0000000167', 'BIOMD0000000601',\n",
-       "       'BIOMD0000000629', 'BIOMD0000000198', 'BIOMD0000001053',\n",
-       "       'BIOMD0000000359', 'BIOMD0000000985', 'BIOMD0000000991',\n",
-       "       'BIOMD0000000984', 'BIOMD0000000774', 'BIOMD0000000006',\n",
-       "       'BIOMD0000000204', 'BIOMD0000000358', 'BIOMD0000000199',\n",
-       "       'BIOMD0000000827', 'BIOMD0000000166', 'BIOMD0000000158',\n",
-       "       'BIOMD0000000825', 'BIOMD0000000366', 'BIOMD0000000776'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "REFERENCE_NAMES\n"
+    "makeAntimony(getTargetNames('BIOMD0000000157')[0])"
    ]
   },
   {
