--- a/notebooks/analyze_biomodels_subnets.ipynb
+++ b/notebooks/analyze_biomodels_subnets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "cd24ba31-b89f-42d9-b5f1-d7a886ee093d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "1c2eb53e-de0d-4274-acdd-a9f54a8212a4",
    "metadata": {},
    "outputs": [
@@ -67,53 +67,59 @@
        "      <th>induced_network</th>\n",
        "      <th>name_dct</th>\n",
        "      <th>num_assignment_pair</th>\n",
+       "      <th>is_truncated</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>BIOMD0000000191</td>\n",
-       "      <td>BIOMD0000000634</td>\n",
+       "      <td>BIOMD0000000230</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BIOMD0000000191</td>\n",
-       "      <td>BIOMD0000000152</td>\n",
+       "      <td>BIOMD0000000998</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>BIOMD0000000191</td>\n",
-       "      <td>BIOMD0000000146</td>\n",
+       "      <td>BIOMD0000000810</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>BIOMD0000000191</td>\n",
-       "      <td>BIOMD0000000608</td>\n",
+       "      <td>BIOMD0000000347</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>BIOMD0000000191</td>\n",
-       "      <td>BIOMD0000000807</td>\n",
+       "      <td>BIOMD0000000391</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,44 +127,45 @@
       ],
       "text/plain": [
        "    reference_name      target_name reference_network induced_network  \\\n",
-       "0  BIOMD0000000191  BIOMD0000000634               NaN             NaN   \n",
-       "1  BIOMD0000000191  BIOMD0000000152               NaN             NaN   \n",
-       "2  BIOMD0000000191  BIOMD0000000146               NaN             NaN   \n",
-       "3  BIOMD0000000191  BIOMD0000000608               NaN             NaN   \n",
-       "4  BIOMD0000000191  BIOMD0000000807               NaN             NaN   \n",
+       "0  BIOMD0000000191  BIOMD0000000230               NaN             NaN   \n",
+       "1  BIOMD0000000191  BIOMD0000000998               NaN             NaN   \n",
+       "2  BIOMD0000000191  BIOMD0000000810               NaN             NaN   \n",
+       "3  BIOMD0000000191  BIOMD0000000347               NaN             NaN   \n",
+       "4  BIOMD0000000191  BIOMD0000000391               NaN             NaN   \n",
        "\n",
-       "  name_dct  num_assignment_pair  \n",
-       "0      NaN                  NaN  \n",
-       "1      NaN                  NaN  \n",
-       "2      NaN                  NaN  \n",
-       "3      NaN                  NaN  \n",
-       "4      NaN                  NaN  "
+       "  name_dct  num_assignment_pair  is_truncated  \n",
+       "0      NaN                  NaN         False  \n",
+       "1      NaN                  NaN         False  \n",
+       "2      NaN                  NaN          True  \n",
+       "3      NaN                  NaN         False  \n",
+       "4      NaN                  NaN         False  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PATH = os.path.join(cn.PROJECT_DIR, \"biomodels_subnets.csv\")\n",
+    "#PATH = os.path.join(cn.PROJECT_DIR, \"biomodels_subnets.csv\")\n",
+    "PATH = \"/Users/jlheller/Downloads/biomodels_checkpoint.csv\"\n",
     "FULL_DF = pd.read_csv(PATH)\n",
     "FULL_DF.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "214071cd-9204-492d-a937-1532609cb871",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(186, 492)"
+       "(113, 489)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,6 +178,16 @@
     "TARGET_NAMES.sort()\n",
     "NUM_TARGET = len(TARGET_NAMES)\n",
     "NUM_REFERENCE, NUM_TARGET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd03803e-587e-4476-86d1-d6b9b5ae2adc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkDuplicates(FULL_DF)"
    ]
   },
   {
@@ -332,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "285efb2b-f9c3-47fc-8abd-1a6a783a6aa9",
    "metadata": {},
    "outputs": [],
@@ -345,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3d60abcd-731a-47d4-8e29-2925e51fab2f",
    "metadata": {},
    "outputs": [
@@ -389,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e870c9e9-9997-4e6b-9fee-fe66649bf768",
    "metadata": {},
    "outputs": [
@@ -421,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "77fda729-7fd6-4b6f-b6a4-3a7873aa270e",
    "metadata": {},
    "outputs": [
@@ -456,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ef241846-d661-4e62-8235-79c1f9cd1914",
    "metadata": {},
    "outputs": [
@@ -497,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "517a1053-2e00-4829-8c9a-a3108677fd14",
    "metadata": {},
    "outputs": [
@@ -532,33 +549,6 @@
     "names = getTargetNames(\"BIOMD000000022x\")\n",
     "assert(names is None)\n",
     "print(\"OK!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "cc9aff48-671e-40a9-8257-b3493be8ceb9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    BIOMD0000000939\n",
-       "1    BIOMD0000000269\n",
-       "2    BIOMD0000000056\n",
-       "3    BIOMD0000000704\n",
-       "4    BIOMD0000000856\n",
-       "5    BIOMD0000000429\n",
-       "Name: target_name, dtype: object"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SUBNET_DF[SUBNET_DF[\"reference_name\"] == 'BIOMD0000000224'][\"target_name\"]"
    ]
   },
   {
@@ -661,7 +651,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x16c10adf0>]"
+       "[<matplotlib.lines.Line2D at 0x1776e18e0>]"
       ]
      },
      "execution_count": 14,
@@ -1049,12 +1039,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "c0032e23-2dee-4ebc-a74e-d8423c4ebe16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "makeAntimony(getTargetNames('BIOMD0000000157')[0])"
+    "makeAntimony(getTargetNames('BIOMD0000000875')[0])"
    ]
   },
   {
