--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
-1. Rename to pySubnetSB and change imports.
 1.1 Better repo
 2.1 Create jupyter example
 3. Create samples for command line
 5.1 Evaluation of the effectiveness of constraints
 Analysis
+  1. Evaluate significance of biomodels induced models
   3. Detailed analysis of
      a. Characterize weak structural identical
      b. Are strong structural identical multitone?
@@ -12,3 +12,6 @@ Analysis
      sirn is cluster superset of naive
   5. Statistics for clusters: cluster_size, clustereq1, clustergt1_size
   6. Examine strong clusters to see differences. Simulate.
+Data
+1. Create datasets for weak and strong analysis of BioModels
+2. Create dataset for summarizes of BioModels models by number of reactions, species
