Updates for consolidating biomodels summary.

--- a/notebooks/analyze_biomodels_subnets.ipynb
+++ b/notebooks/analyze_biomodels_subnets.ipynb
@@ -1750,85 +1750,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "aac33f98-2b0c-4b4e-8ebe-a8668a4656d8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['BIOMD0000000006',\n",
-       " 'BIOMD0000000027',\n",
-       " 'BIOMD0000000031',\n",
-       " 'BIOMD0000000104',\n",
-       " 'BIOMD0000000121',\n",
-       " 'BIOMD0000000156',\n",
-       " 'BIOMD0000000157',\n",
-       " 'BIOMD0000000158',\n",
-       " 'BIOMD0000000159',\n",
-       " 'BIOMD0000000178',\n",
-       " 'BIOMD0000000191',\n",
-       " 'BIOMD0000000194',\n",
-       " 'BIOMD0000000224',\n",
-       " 'BIOMD0000000225',\n",
-       " 'BIOMD0000000307',\n",
-       " 'BIOMD0000000309',\n",
-       " 'BIOMD0000000310',\n",
-       " 'BIOMD0000000311',\n",
-       " 'BIOMD0000000321',\n",
-       " 'BIOMD0000000322',\n",
-       " 'BIOMD0000000458',\n",
-       " 'BIOMD0000000519',\n",
-       " 'BIOMD0000000520',\n",
-       " 'BIOMD0000000678',\n",
-       " 'BIOMD0000000764',\n",
-       " 'BIOMD0000000771',\n",
-       " 'BIOMD0000000772',\n",
-       " 'BIOMD0000000789',\n",
-       " 'BIOMD0000000798',\n",
-       " 'BIOMD0000000825',\n",
-       " 'BIOMD0000000845',\n",
-       " 'BIOMD0000000854',\n",
-       " 'BIOMD0000000866',\n",
-       " 'BIOMD0000000875',\n",
-       " 'BIOMD0000000876',\n",
-       " 'BIOMD0000000877',\n",
-       " 'BIOMD0000000902',\n",
-       " 'BIOMD0000000932',\n",
-       " 'BIOMD0000000962',\n",
-       " 'BIOMD0000000967',\n",
-       " 'BIOMD0000000970',\n",
-       " 'BIOMD0000000974',\n",
-       " 'BIOMD0000000976',\n",
-       " 'BIOMD0000000984',\n",
-       " 'BIOMD0000001007',\n",
-       " 'BIOMD0000001012',\n",
-       " 'BIOMD0000001016',\n",
-       " 'BIOMD0000001020',\n",
-       " 'BIOMD0000001022',\n",
-       " 'BIOMD0000001034',\n",
-       " 'BIOMD0000001035',\n",
-       " 'BIOMD0000001043',\n",
-       " 'BIOMD0000001048',\n",
-       " 'BIOMD0000001056']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SIGNIFICANT_REFERENCE_NAMES"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "f41e2154-f070-4d44-aac9-dd8d4a40a1e1",
+   "id": "d5332854-2ada-4eb4-86e9-027a1eaf94ad",
    "metadata": {},
    "source": [
-    "**CANNOT FIND 150**"
+    "# CDF of Number of targets per reference"
    ]
   },
   {
